--- a/index.html
+++ b/index.html
@@ -469,9 +469,12 @@ s0.parentNode.insertBefore(s1,s0);
 
             document.getElementById('welcomeMessage').textContent = `XIN CHÀO, ${loggedInUsername.toUpperCase()}`;
             errorEl.textContent = "";
+
+            // Change: Instead of selecting AI directly, show the choice screen
             setScreenVisibility(DOM.appScreen, [DOM.loginScreen]);
-            const isVip = gen4Codes.includes(code);
-            selectAI(isVip ? 'gen4' : 'base');
+            setScreenVisibility(DOM.aiChoiceContainer, [DOM.menuContainer, DOM.scanningContainer, DOM.resultContainer]);
+            updateVideoBackground('aiChoice');
+
         } else {
              playSound('error');
              errorEl.textContent = "Mã truy cập không chính xác. Vui lòng thử lại!";
